--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,10 @@ jobs:
       - name: Build the app
         run: npm run build
 
-      # Deploy to GitHub Pages
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages  # This is the branch where the build will be deployed
-          folder: build     # The folder that contains the production build
-          token: ${{ secrets.GITHUB_TOKEN }}  # Use GitHub token to deploy
+      # # Deploy to GitHub Pages
+      # - name: Deploy to GitHub Pages
+      #   uses: JamesIves/github-pages-deploy-action@v4
+      #   with:
+      #     branch: gh-pages  # This is the branch where the build will be deployed
+      #     folder: build     # The folder that contains the production build
+      #     token: ${{ secrets.GITHUB_TOKEN }}  # Use GitHub token to deploy
